# event-management

./: .coverage  .coverage.Abhays-MacBook-Air.local.20228.204466  .dockerignore  .gitignore  Dockerfile  README.md  Task_documentation  alembic.ini  alembic_version_fix.py  check_alembic_revision.py  check_alembic_version_table.py  check_user_table.py  check_userrole_enum.py  create_userrole_enum_manually.py  docker-compose.yml  dump.rdb  example.env  logging_config.json  pyproject.toml  pytest.ini  register_user.py  requirements-test.txt  requirements.txt  reset_test_db.py  test_output.txt  users.txt
alembic/: env.py
alembic/versions/: 20240522_add_admin_and_user_to_userrole_enum.py  22c8deca233b_merge_heads.py  49797b06ea39_add_current_version_to_events.py  89298658ab73_add_audit_log_table.py  add_event_versions_table.py  add_sync_states_table.py  create_userrole_enum.py  initial_migration.py
app/: main.py
app/api/: api.py  auth.py  dependencies.py  events.py  users.py
app/core/: cache.py  celery_app.py  config.py  conflict_resolution.py  database.py  db_utils.py  email.py  exceptions.py  logging.py  metrics.py  models.py  notification.py  rate_limit.py  scheduler.py  security_middleware.py  transaction.py
tests/: conftest.py  test_background_tasks.py  test_changelog.py  test_event_notification.py  test_event_notifications.py  test_event_participants.py  test_event_recurrence.py  test_event_search.py  test_event_service.py  test_event_share.py  test_event_versions.py  test_events.py  test_main.py  test_security.py  test_security_middleware.py  test_users.py
(+43 files in other folders)
